TestSuite/errors/err0239.pas
type
  I1 = interface 
  end;

begin
  (I1(System.Math.Sin)); 
end.